@@ -10,6 +10,7 @@
 * Added possibility to invert the behaviour of mouse scroll for all widgets or
   for graph dot widget.
 * Some output parameters like Bypass are not exported into configuration file anymore.
+* Removed Makefile.d. Dependencies are now automatically generated at the build stage.
 
 === 1.2.6 ===
 * Implemented Mixer plugin series for 4, 8 and 16 Mono/Stereo channels.
